--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -169,6 +169,11 @@
 }
 
 .trobada-link:hover {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  color: white;
+  font-size: 0.9rem;
+  border-radius: 4px;
   background-color: #333;
 }
 
